Fix DESIGN-10: All methods other than Grid no longer use coordinates